[package]
name = "cvvdp-gpu"
version = "0.0.1"
description = "Multi-vendor GPU implementation of ColorVideoVDP (still-image mode), via CubeCL"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license = "AGPL-3.0-only OR LicenseRef-Imazen-Commercial"
rust-version.workspace = true
publish = false

[features]
default = ["cuda", "wgpu", "cpu", "pixels"]
# Consistency with sibling metric crates: runtime features imply
# `cubecl-types`.
cuda = ["cubecl/cuda", "cubecl-types"]
wgpu = ["cubecl/wgpu", "cubecl-types"]
hip  = ["cubecl/hip",  "cubecl-types"]
cpu  = ["cubecl/cpu",  "cubecl-types"]
# Enables integration tests that fetch the pycvvdp v0.5.4 goldens
# from R2 and check Rust output against them. Off by default so
# `cargo test` stays offline. The skip-via-feature is what avoids
# the "silent runtime skip" anti-pattern: when this feature isn't
# enabled, the parity tests aren't compiled in at all.
parity-goldens = []
# Opaque-API zenpixels integration — see dssim-gpu/Cargo.toml.
pixels = ["dep:zenpixels", "dep:zenpixels-convert"]
# Exposes the generic typed Cvvdp<R> + helpers (estimate_gpu_memory_bytes,
# recommend_parallel, PARALLEL_SAFETY_FACTOR). Off by default — opaque
# CvvdpOpaque is the supported surface.
cubecl-types = []

[dependencies]
# CPU-side scalar reference + shared params/presets/Score types. Phase
# 8c.1-B flipped this direction so the GPU crate consumes from the CPU
# crate (the canonical "no GPU" reference now lives in cvvdp).
cvvdp = { workspace = true, default-features = false, features = ["std"] }
cubecl = { workspace = true }
# JSON parsing for the vendored display_models.json / color_spaces.json
# preset registry (re-exported from cvvdp::presets, but cvvdp-gpu's own
# tests still parse JSON directly). Workspace serde_json is 1.x.
serde_json = { workspace = true }
zenpixels = { version = "0.2.11", default-features = false, features = ["std"], optional = true }
zenpixels-convert = { version = "0.2.11", default-features = false, features = ["std"], optional = true }

[dev-dependencies]
image = { workspace = true, features = ["png", "jpeg"] }
serde_json = { workspace = true }
zenmetrics-corpus = { workspace = true }
# Used only by `tests/parity.rs` when the `parity-goldens` feature
# is on. Cargo doesn't allow optional dev-dependencies, so these
# compile whenever tests are built — the runtime binary is unaffected.
sha2 = "0.10.9"
ureq = "3.3.0"
zenbench = { version = "0.1.8", features = ["criterion-compat"] }
zenpixels = { version = "0.2.11", default-features = false, features = ["std"] }

[[bench]]
name = "score"
harness = false

# Examples + tests consuming the typed Cvvdp<R> require the
# cubecl-types feature.
[[example]]
name = "bench_warm_ref"
required-features = ["cubecl-types"]

[[example]]
name = "cap_memory_estimate"
required-features = ["cubecl-types"]

[[example]]
name = "cvvdp_mem_table"
required-features = ["cubecl-types"]

[[example]]
name = "diffmap_overhead"
required-features = ["cubecl-types"]

[[example]]
name = "manifest_parity_probe"
required-features = ["cubecl-types"]

[[example]]
name = "parity_iphone_eval"

[[example]]
name = "parity_iphone_eval_gpu"
required-features = ["cuda", "cubecl-types"]

[[example]]
name = "score_two_displays"
required-features = ["cuda", "cubecl-types"]

[[example]]
name = "time_12mp"
required-features = ["cubecl-types"]

[[example]]
name = "time_size_sweep"
required-features = ["cubecl-types"]

[[example]]
name = "bench_4096_one_mode"
required-features = ["cuda"]

[[test]]
name = "band_weights_invariants"
required-features = ["cubecl-types"]

[[test]]
name = "clamp_phase_uncertainty_invariants"
required-features = ["cubecl-types"]

[[test]]
name = "color_kernel"
required-features = ["cubecl-types"]

[[test]]
name = "color_kernel_display_dispatch"
required-features = ["cubecl-types"]

[[test]]
name = "color_scalar"
required-features = ["cubecl-types"]

[[test]]
name = "column_name"
required-features = ["cubecl-types"]

[[test]]
name = "const_str_helpers"
required-features = ["cubecl-types"]

[[test]]
name = "cpu_backend"
required-features = ["cubecl-types"]

[[test]]
name = "csf_axes_invariants"
required-features = ["cubecl-types"]

[[test]]
name = "csf_channel_invariants"
required-features = ["cubecl-types"]

[[test]]
name = "csf_kernel"
required-features = ["cubecl-types"]

[[test]]
name = "csf_scalar"
required-features = ["cubecl-types"]

[[test]]
name = "diffmap_dispatch"
required-features = ["cubecl-types"]

[[test]]
name = "diffmap_invariants"
required-features = ["cubecl-types"]

[[test]]
name = "display_geometry"
required-features = ["cubecl-types"]

[[test]]
name = "do_pooling_invariants"
required-features = ["cubecl-types"]

[[test]]
name = "error_traits"
required-features = ["cubecl-types"]

[[test]]
name = "gaussian_blur_sigma3_invariants"
required-features = ["cubecl-types"]

[[test]]
name = "gausspyr_expand_invariants"
required-features = ["cubecl-types"]

[[test]]
name = "gausspyr_reduce_invariants"
required-features = ["cubecl-types"]

[[test]]
name = "goldens_metadata"
required-features = ["cubecl-types"]

[[test]]
name = "laplacian_pyramid_invariants"
required-features = ["cubecl-types"]

[[test]]
name = "lib_constants"
required-features = ["cubecl-types"]

[[test]]
name = "lib_reexports"
required-features = ["cubecl-types"]

[[test]]
name = "masking_constants"
required-features = ["cubecl-types"]

[[test]]
name = "masking_kernel"
required-features = ["cubecl-types"]

[[test]]
name = "masking_safe_pow"
required-features = ["cubecl-types"]

[[test]]
name = "masking_scalar"
required-features = ["cubecl-types"]

[[test]]
name = "mask_pool_pixel_invariants"
required-features = ["cubecl-types"]

[[test]]
name = "met2jod_invariants"
required-features = ["cubecl-types"]

[[test]]
name = "mult_mutual_band_invariants"
required-features = ["cubecl-types"]

[[test]]
name = "mult_mutual_pixel_invariants"
required-features = ["cubecl-types"]

[[test]]
name = "params_placeholder_non_display"
required-features = ["cubecl-types"]

[[test]]
name = "params_placeholder"
required-features = ["cubecl-types"]

[[test]]
name = "parity"
required-features = ["cubecl-types"]

[[test]]
name = "perf_mode_invariants"
required-features = ["cubecl-types"]

[[test]]
name = "phase_uncertainty_band_invariants"
required-features = ["cubecl-types"]

[[test]]
name = "pipeline_color"
required-features = ["cubecl-types"]

[[test]]
name = "pipeline_score"
required-features = ["cubecl-types"]

[[test]]
name = "pool_scalar"
required-features = ["cubecl-types"]

[[test]]
name = "precompute_logs_row_invariants"
required-features = ["cubecl-types"]

[[test]]
name = "predict_jod_invariants"
required-features = ["cubecl-types"]

[[test]]
name = "pyramid_kernel"
required-features = ["cubecl-types"]

[[test]]
name = "pyramid_scalar"
required-features = ["cubecl-types"]

[[test]]
name = "shadow_jod"
required-features = ["cubecl-types"]

[[test]]
name = "srgb_byte_to_dkl_invariants"
required-features = ["cubecl-types"]

[[test]]
name = "state_machine_independence"
required-features = ["cubecl-types"]

[[test]]
name = "version_lockstep"
required-features = ["cubecl-types"]

[[test]]
name = "weber_pyramid_invariants"
required-features = ["cubecl-types"]

[[test]]
name = "opaque"
required-features = ["cubecl-types"]

[[test]]
name = "eotf_primaries_invariants"
required-features = ["cubecl-types"]
