[package]
name = "cvvdp-gpu"
version = "0.0.1"
description = "Multi-vendor GPU implementation of ColorVideoVDP (still-image mode), via CubeCL"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license = "AGPL-3.0-only OR LicenseRef-Imazen-Commercial"
rust-version.workspace = true
publish = false

[features]
default = ["cuda", "wgpu", "cpu", "pixels"]
# Consistency with sibling metric crates: runtime features imply
# `cubecl-types`.
cuda = ["cubecl/cuda", "cubecl-types", "zenmetrics-gpu-core/cuda"]
wgpu = ["cubecl/wgpu", "cubecl-types", "zenmetrics-gpu-core/wgpu"]
hip  = ["cubecl/hip",  "cubecl-types", "zenmetrics-gpu-core/hip"]
cpu  = ["cubecl/cpu",  "cubecl-types", "zenmetrics-gpu-core/cpu"]
# Enables integration tests that fetch the pycvvdp v0.5.4 goldens
# from R2 and check Rust output against them. Off by default so
# `cargo test` stays offline. The skip-via-feature is what avoids
# the "silent runtime skip" anti-pattern: when this feature isn't
# enabled, the parity tests aren't compiled in at all.
parity-goldens = []
# Opaque-API zenpixels integration — see dssim-gpu/Cargo.toml. The
# sRGB conversion itself lives in zenmetrics-gpu-core.
pixels = ["dep:zenpixels", "zenmetrics-gpu-core/pixels"]
# Exposes the generic typed Cvvdp<R> + helpers (estimate_gpu_memory_bytes,
# recommend_parallel, PARALLEL_SAFETY_FACTOR). Off by default — opaque
# CvvdpOpaque is the supported surface.
cubecl-types = ["zenmetrics-gpu-core/cubecl-types"]

[dependencies]
# CPU-side scalar reference + shared params/presets/Score types. Phase
# 8c.1-B flipped this direction so the GPU crate consumes from the CPU
# crate (the canonical "no GPU" reference now lives in cvvdp).
cvvdp = { workspace = true, default-features = false, features = ["std"] }
cubecl = { workspace = true }
zenmetrics-gpu-core = { path = "../zenmetrics-gpu-core", default-features = false }
# JSON parsing for the vendored display_models.json / color_spaces.json
# preset registry (re-exported from cvvdp::presets, but cvvdp-gpu's own
# tests still parse JSON directly). Workspace serde_json is 1.x.
serde_json = { workspace = true }
zenpixels = { version = "0.2.11", default-features = false, features = ["std"], optional = true }
zenpixels-convert = { version = "0.2.11", default-features = false, features = ["std"], optional = true }

[dev-dependencies]
image = { workspace = true, features = ["png", "jpeg"] }
serde_json = { workspace = true }
zenmetrics-corpus = { workspace = true }
# Used only by `tests/parity.rs` when the `parity-goldens` feature
# is on. Cargo doesn't allow optional dev-dependencies, so these
# compile whenever tests are built — the runtime binary is unaffected.
sha2 = "0.10.9"
ureq = "3.3.0"
zenbench = { version = "0.1.8", features = ["criterion-compat"] }
zenpixels = { version = "0.2.11", default-features = false, features = ["std"] }

[[bench]]
name = "score"
harness = false

# Examples + tests consuming the typed Cvvdp<R> require the
# cubecl-types feature.
[[example]]
name = "bench_warm_ref"
required-features = ["cubecl-types"]

[[example]]
name = "cap_memory_estimate"
required-features = ["cubecl-types"]

[[example]]
name = "cvvdp_mem_table"
required-features = ["cubecl-types"]

[[example]]
name = "mem_estimate_tsv"
required-features = ["cubecl-types"]

[[example]]
name = "diffmap_overhead"
required-features = ["cubecl-types"]

[[example]]
name = "manifest_parity_probe"
required-features = ["cubecl-types"]

[[example]]
name = "parity_iphone_eval"

[[example]]
name = "parity_iphone_eval_gpu"
required-features = ["cuda", "cubecl-types"]

[[example]]
name = "score_two_displays"
required-features = ["cuda", "cubecl-types"]

[[example]]
name = "time_12mp"
required-features = ["cubecl-types"]

[[example]]
name = "time_size_sweep"
required-features = ["cubecl-types"]

[[example]]
name = "bench_4096_one_mode"
required-features = ["cuda"]

# THROWAWAY feasibility spike (task #152): per-stream VRAM isolation.
# Not part of the public API; gated behind `cuda`.
[[example]]
name = "vram_isolation_spike"
required-features = ["cuda"]

# THROWAWAY feasibility spike (task #153): per-stream VRAM isolation on
# the wgpu backend (Metal/Vulkan/DX12 proxy). Not part of the public API;
# gated behind `wgpu`.
[[example]]
name = "wgpu_isolation_spike"
required-features = ["wgpu"]

[[test]]
name = "it"
path = "tests/it/main.rs"
