[package]
name = "cvvdp"
version = "0.1.0"
description = "Maximally optimized pure-Rust CPU port of ColorVideoVDP (still-image), SIMD via archmage"
license = "AGPL-3.0-or-later"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

# archmage::incant! macro internally checks `cfg(feature = "avx512")`
# even when no AVX-512 tier is used — suppress the unexpected_cfgs
# warning from the macro expansion (matches the zenblend pattern).
[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(feature, values("avx512"))'] }

[features]
default = ["std", "parallel"]
# Pull AVX-512 SIMD tier into the archmage `incant!` dispatch path
# used by the pyramid 5-tap kernels. OPT-IN: enabling this forces every
# archmage-routed incant! site in cvvdp to provide v4 / v4x tier
# variants (currently only `simd_pyramid` does — `simd_math`'s
# `safe_pow_with_offset_into` / `vexp_into` / `vlog_into` / `vpow_into`
# routes its own incant! with the default tier set, which does NOT
# include v4 / v4x). Until those gain v4 variants, default-off avoids a
# build failure. Without this flag, AVX-512 CPUs run the 8-wide AVX2
# (`v4` polyfill) tier — still faster than scalar, just not the 16-wide
# `v4x` win.
avx512 = ["archmage/avx512", "magetypes/avx512"]
# Use the standard library — most users want this. With `std` disabled
# the crate falls back to `core + alloc` only, which is what no_std
# wasm32 targets need.
std = []
# Allocator-only build. `alloc` is implied — kept as a feature to
# make intent explicit. no_std + alloc is the minimum target.
alloc = []
# Rayon-backed per-band parallelism. Implies std (rayon requires std).
parallel = ["std", "dep:rayon"]
# `zenpixels` integration smoke (scoring direct from `PixelLayout`).
pixels = ["dep:zenpixels", "dep:zenpixels-convert"]
# TEST-ONLY: re-export the `pub(crate)` SIMD kernel entry points
# (simd_pyramid + simd_math) through a `#[doc(hidden)]` module so the
# brute-force SIMD-vs-scalar equivalence harness in
# `tests/simd_equivalence.rs` can drive them directly. No production
# code path enables this; it carries zero logic change and is hidden
# from rustdoc. See `lib.rs::__simd_equiv_test_api`.
__simd_equiv_test = []

[dependencies]
# Shared CSF + DKL + masking constants come from cvvdp-gpu — we depend
# directly so a future LUT bump only needs one update site.
cvvdp-gpu = { workspace = true, default-features = false }
# Safe SIMD dispatch via capability tokens. Used by:
#  - the pyramid 5-tap Gaussian SIMD port (Chunk 2 of the SIMD plan,
#    `simd_pyramid.rs`),
#  - vectorized transcendentals `vexp` / `vlog` / `vpow` via
#    `simd_math.rs` (`pow_midp_unchecked` ≈ 128 ULP / 1e-5 rel-err)
#    used by the masking `safe_pow` calls.
archmage = { workspace = true }
magetypes = { workspace = true }
rayon = { version = "1.10", optional = true }
zenpixels = { version = "0.2.11", default-features = false, features = ["std"], optional = true }
zenpixels-convert = { version = "0.2.11", default-features = false, features = ["std"], optional = true }

[dev-dependencies]
# Corpus for parity tests (256² source + JPEG-q variants).
zenmetrics-corpus = { workspace = true }
# Used to decode the corpus PNG + JPEGs.
image = { workspace = true, features = ["png", "jpeg"] }
