[package]
name = "dssim-gpu"
version = "0.0.1"
description = "Multi-vendor GPU implementation of the DSSIM perceptual image quality metric, via CubeCL"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license = "MIT"
rust-version = "1.92"
publish = false

[features]
default = ["cuda", "wgpu", "cpu", "fast-reduction"]
cuda = ["cubecl/cuda"]
wgpu = ["cubecl/wgpu"]
hip  = ["cubecl/hip"]
cpu  = ["cubecl/cpu"]
# Use Atomic<f32>::fetch_add for the per-scale (Σ ssim, Σ |ssim - avg|)
# reduction. Verified working on:
#   - CUDA (NVIDIA, native runtime)
#   - DX12 (Windows wgpu, real driver — NVIDIA / AMD)
#   - HIP  (AMD ROCm) by analogy with the cubecl atomic intrinsics path
# Verified BROKEN on Metal (cubecl-wgpu's Metal sub-backend reports
# Atomic<f32> = LoadStore|Add as supported, but the codegen silently
# no-ops). For Metal builds:
#   cargo build -p dssim-gpu --no-default-features --features wgpu
fast-reduction = []

[dependencies]
cubecl = { version = "0.10.0-pre.4", default-features = false, features = ["std"] }

[dev-dependencies]
dssim-core = { workspace = true }
imgref = "1"
rgb = "0.8"
bytemuck = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
