[package]
name = "dssim-gpu"
version = "0.0.1"
description = "Multi-vendor GPU implementation of the DSSIM perceptual image quality metric, via CubeCL"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
# Note: dssim-gpu has a SEPARATE commercial track from the rest of the
# zenmetrics workspace because the underlying DSSIM algorithm is
# upstream-licensed by Pornel. See COMMERCIAL.md at the repo root.
license = "AGPL-3.0-only OR LicenseRef-Imazen-DSSIM-Commercial"
rust-version.workspace = true
publish = false

[features]
default = ["cuda", "wgpu", "cpu", "fast-reduction"]
cuda = ["cubecl/cuda"]
wgpu = ["cubecl/wgpu"]
hip  = ["cubecl/hip"]
cpu  = ["cubecl/cpu"]
# Use Atomic<f32>::fetch_add for the per-scale (Σ ssim, Σ |ssim - avg|)
# reduction. Verified working on:
#   - CUDA (NVIDIA, native runtime)
#   - DX12 (Windows wgpu, real driver — NVIDIA / AMD)
#   - HIP  (AMD ROCm) by analogy with the cubecl atomic intrinsics path
# Verified BROKEN on Metal (cubecl-wgpu's Metal sub-backend reports
# Atomic<f32> = LoadStore|Add as supported, but the codegen silently
# no-ops). For Metal builds:
#   cargo build -p dssim-gpu --no-default-features --features wgpu
fast-reduction = []

[dependencies]
cubecl = { workspace = true }

[dev-dependencies]
dssim-core = { workspace = true }
imgref = { workspace = true }
rgb = { workspace = true }
bytemuck = { workspace = true }
image = { workspace = true, features = ["png", "jpeg"] }
zenmetrics-corpus = { workspace = true }
