[package]
name = "dssim-gpu"
version = "0.0.1"
description = "Multi-vendor GPU implementation of the DSSIM perceptual image quality metric, via CubeCL"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
# Note: dssim-gpu has a SEPARATE commercial track from the rest of the
# zenmetrics workspace because the underlying DSSIM algorithm is
# upstream-licensed by Pornel. See COMMERCIAL.md at the repo root.
license = "AGPL-3.0-only OR LicenseRef-Imazen-DSSIM-Commercial"
rust-version.workspace = true
publish = false

[features]
# Defaults removed `fast-reduction` 2026-05-27 (Phase 8e.4 audit;
# mirrors ssim2-gpu task #52). cubecl-wgpu's Metal backend silently
# no-ops Atomic<f32>::fetch_add (every reduction returns zero, every
# score collapses to the default value). The portable per-thread-
# partials + finalize reduction is deterministic and works on every
# cubecl backend including Metal. Opt back into `fast-reduction` via
# explicit feature flag for CUDA-only deployments where the ~2-3×
# reduction-step speedup matters more than reproducibility. Tracked
# in `crates/zenmetrics-api/docs/CUBECL_METAL_ATOMIC_FIX.md`.
default = ["cuda", "wgpu", "cpu", "pixels"]
# Runtime features imply `cubecl-types` so doctests / examples that
# import `Dssim<R>` directly (or `cubecl::wgpu::WgpuRuntime`) compile
# when any backend feature is enabled.
cuda = ["cubecl/cuda", "cubecl-types", "zenmetrics-gpu-core/cuda"]
wgpu = ["cubecl/wgpu", "cubecl-types", "zenmetrics-gpu-core/wgpu"]
hip  = ["cubecl/hip",  "cubecl-types", "zenmetrics-gpu-core/hip"]
cpu  = ["cubecl/cpu",  "cubecl-types", "zenmetrics-gpu-core/cpu"]
# Opaque-API zenpixels integration. Adds `compute_pixels(PixelSlice,
# PixelSlice)` to `DssimOpaque`. On by default — the conversion path
# is per-call (only allocates when format mismatches), the fast path
# is zero-copy.
pixels = ["dep:zenpixels", "zenmetrics-gpu-core/pixels"]
# Exposes the generic typed `Dssim<R: Runtime>` API publicly. Off by
# default — opaque `DssimOpaque` is the supported surface. Advanced
# users who want to construct against a specific cubecl runtime
# (and pin to its version) can opt in.
cubecl-types = ["zenmetrics-gpu-core/cubecl-types"]
# OFF by default since 2026-05-27 (Phase 8e.4 audit). Opt in to use
# `Atomic<f32>::fetch_add` for the per-scale (Σ ssim, Σ |ssim - avg|)
# reduction. Verified correct on:
#   - CUDA (NVIDIA, native runtime)
#   - DX12 (Windows wgpu, real driver — NVIDIA / AMD)
#   - HIP  (AMD ROCm) by analogy with the cubecl atomic intrinsics path
# Verified BROKEN on:
#   - Metal  (cubecl-wgpu's Metal backend reports Atomic<f32> = LoadStore|Add
#            as supported, but the codegen silently no-ops — every
#            reduction returns zero. Root cause + upstream patch:
#            `crates/zenmetrics-api/docs/CUBECL_METAL_ATOMIC_FIX.md`).
#
# Enable for CUDA-only deployments:
#   cargo build -p dssim-gpu --no-default-features --features cuda,fast-reduction
fast-reduction = []

[dependencies]
cubecl = { workspace = true }
zenmetrics-gpu-core = { path = "../zenmetrics-gpu-core", default-features = false }
zenpixels = { version = "0.2.11", default-features = false, features = ["std"], optional = true }

[dev-dependencies]
dssim-core = { workspace = true }
imgref = { workspace = true }
rgb = { workspace = true }
bytemuck = { workspace = true }
image = { workspace = true, features = ["png", "jpeg"] }
zenmetrics-corpus = { workspace = true }
zenpixels = { version = "0.2.11", default-features = false, features = ["std"] }

# Examples and tests that consume the generic typed Dssim<R> require
# the cubecl-types feature. Per-target `required-features` keeps
# `cargo test` / `cargo build --examples` honest without that flag.
[[example]]
name = "bench"
required-features = ["cubecl-types"]

[[example]]
name = "bench_t4_warm"
required-features = ["cubecl-types"]

[[example]]
name = "end_to_end"
required-features = ["cubecl-types"]

[[example]]
name = "parity_corpus"
required-features = ["cubecl-types"]

[[example]]
name = "bench_strip_vs_whole_cuda"
required-features = ["cubecl-types"]

[[example]]
name = "heaptrack_strip_12mp"
required-features = ["cubecl-types"]

[[test]]
name = "parity_lock"
required-features = ["cubecl-types"]

[[test]]
name = "opaque"
required-features = ["cubecl-types"]

[[test]]
name = "strip_parity"
required-features = ["cubecl-types"]
