[package]
name = "iwssim-gpu"
version = "0.0.1"
description = "Multi-vendor GPU implementation of IW-SSIM (Information-content Weighted SSIM, Wang & Li 2011), via CubeCL"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license = "AGPL-3.0-only OR LicenseRef-Imazen-Commercial"
rust-version.workspace = true
publish = false

[features]
default = ["cuda", "wgpu", "cpu", "pixels"]
# Consistency with sibling metric crates: runtime features imply
# `cubecl-types`. iwssim folds its typed surface into `pipeline.rs`
# rather than a separate strip module, so cuda-only already
# compiled — but uniformity matters for umbrella + downstream
# consumers.
cuda = ["cubecl/cuda", "cubecl-types"]
wgpu = ["cubecl/wgpu", "cubecl-types"]
hip = ["cubecl/hip", "cubecl-types"]
cpu = ["cubecl/cpu", "cubecl-types"]
# Opaque-API zenpixels integration — see dssim-gpu/Cargo.toml.
pixels = ["dep:zenpixels", "dep:zenpixels-convert"]
# Exposes the generic typed Iwssim<R>. Off by default.
cubecl-types = []

[dependencies]
cubecl = { workspace = true }
zenpixels = { version = "0.2.11", default-features = false, features = ["std"], optional = true }
zenpixels-convert = { version = "0.2.11", default-features = false, features = ["std"], optional = true }

[build-dependencies]
# Gaussian / binomial coefficient generation at build time.

[dev-dependencies]
bytemuck = { workspace = true }
image = { workspace = true, features = ["png", "jpeg", "bmp"] }
zenpixels = { version = "0.2.11", default-features = false, features = ["std"] }

[[example]]
name = "bench"
required-features = ["cubecl-types"]

[[example]]
name = "bench_profile"
required-features = ["cubecl-types"]

[[example]]
name = "bench_t4_warm"
required-features = ["cubecl-types"]

[[example]]
name = "parity_smoke"
required-features = ["cubecl-types"]

[[example]]
name = "bench_strip_vs_whole"
required-features = ["cubecl-types"]

[[example]]
name = "bench_cachedref_strip"
required-features = ["cubecl-types"]

[[example]]
name = "native_rgb_perf_probe"
required-features = ["cubecl-types"]

[[example]]
name = "strip_memory_tally"

[[example]]
name = "heaptrack_strip_12mp"
required-features = ["cubecl-types"]

[[test]]
name = "parity_lock"
required-features = ["cubecl-types"]

[[test]]
name = "opaque"
required-features = ["cubecl-types"]

[[test]]
name = "small_image_adaptive"
required-features = ["cubecl-types"]

[[test]]
name = "strip_parity"
required-features = ["cubecl-types"]

[[test]]
name = "cached_ref_strip"
required-features = ["cubecl-types"]

[[test]]
name = "rgb_strip"
required-features = ["cubecl-types"]

[[test]]
name = "rgb_strip_native"
required-features = ["cubecl-types"]

[[test]]
name = "vram_probe"
