[package]
name = "iwssim-gpu"
version = "0.0.1"
description = "Multi-vendor GPU implementation of IW-SSIM (Information-content Weighted SSIM, Wang & Li 2011), via CubeCL"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license = "AGPL-3.0-only OR LicenseRef-Imazen-Commercial"
rust-version.workspace = true
publish = false

[features]
default = ["cuda", "wgpu", "cpu", "pixels"]
# Consistency with sibling metric crates: runtime features imply
# `cubecl-types`. iwssim folds its typed surface into `pipeline.rs`
# rather than a separate strip module, so cuda-only already
# compiled — but uniformity matters for umbrella + downstream
# consumers.
cuda = ["cubecl/cuda", "cubecl-types", "zenmetrics-gpu-core/cuda"]
wgpu = ["cubecl/wgpu", "cubecl-types", "zenmetrics-gpu-core/wgpu"]
hip = ["cubecl/hip", "cubecl-types", "zenmetrics-gpu-core/hip"]
cpu = ["cubecl/cpu", "cubecl-types", "zenmetrics-gpu-core/cpu"]
# Opaque-API zenpixels integration — see dssim-gpu/Cargo.toml.
pixels = ["dep:zenpixels", "zenmetrics-gpu-core/pixels"]
# Exposes the generic typed Iwssim<R>. Off by default.
cubecl-types = ["zenmetrics-gpu-core/cubecl-types"]

[dependencies]
cubecl = { workspace = true }
zenmetrics-gpu-core = { path = "../zenmetrics-gpu-core", default-features = false }
# Phase 8g.1 — canonical scalar reference + shared algorithm constants
# (NUM_SCALES, MIN_NATIVE_DIM) live in `iwssim`. gpu→cpu direction
# matches the cvvdp-gpu/cvvdp split (Phase 8c.1-B).
iwssim = { workspace = true, default-features = false, features = ["std"] }
zenpixels = { version = "0.2.11", default-features = false, features = ["std"], optional = true }

[build-dependencies]
# Gaussian / binomial coefficient generation at build time. The shared
# helper crate `iwssim-filter-codegen` owns the math so iwssim and
# iwssim-gpu emit bit-identical filter taps by construction. (Each
# crate still has its own `crate::filters` module — cube-macros
# capture `crate`-relative paths at expansion time and re-emit them
# on the device side.)
iwssim-filter-codegen = { workspace = true }

[dev-dependencies]
bytemuck = { workspace = true }
image = { workspace = true, features = ["png", "jpeg", "bmp"] }
zenpixels = { version = "0.2.11", default-features = false, features = ["std"] }

[[example]]
name = "bench"
required-features = ["cubecl-types"]

[[example]]
name = "bench_profile"
required-features = ["cubecl-types"]

[[example]]
name = "bench_t4_warm"
required-features = ["cubecl-types"]

[[example]]
name = "parity_smoke"
required-features = ["cubecl-types"]

[[example]]
name = "bench_strip_vs_whole"
required-features = ["cubecl-types"]

[[example]]
name = "bench_cachedref_strip"
required-features = ["cubecl-types"]

[[example]]
name = "native_rgb_perf_probe"
required-features = ["cubecl-types"]

[[example]]
name = "strip_memory_tally"

[[example]]
name = "heaptrack_strip_12mp"
required-features = ["cubecl-types"]

[[test]]
name = "it"
path = "tests/it/main.rs"
