[package]
name = "ssim2-gpu"
version = "0.0.1"
description = "Multi-vendor GPU implementation of the SSIMULACRA2 perceptual image quality metric, via CubeCL"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license = "AGPL-3.0-only OR LicenseRef-Imazen-Commercial"
rust-version.workspace = true
publish = false

[features]
default = ["cuda", "wgpu", "cpu", "fast-reduction", "pixels"]
cuda = ["cubecl/cuda"]
wgpu = ["cubecl/wgpu"]
hip = ["cubecl/hip"]
cpu = ["cubecl/cpu"]
# Opaque-API zenpixels integration — see dssim-gpu/Cargo.toml.
pixels = ["dep:zenpixels", "dep:zenpixels-convert"]
# Exposes the generic typed Ssim2<R> / Ssim2Batch<R>. Off by default.
cubecl-types = []
# Use Atomic<f32>::fetch_add for the per-octave reduction. Verified
# correct on:
#   - CUDA   (NVIDIA, native runtime)
#   - DX12   (Windows wgpu, real NVIDIA / AMD driver — including RTX 5070)
#   - HIP    (AMD ROCm) — by analogy; uses CUDA-style atomic intrinsics
# Verified BROKEN on:
#   - Metal  (cubecl-wgpu's Metal backend reports Atomic<f32> = LoadStore|Add
#            as supported, but the codegen silently no-ops at execution
#            time — every reduction returns zero and every score
#            collapses to ~100).
#
# Disable when targeting Metal:
#   cargo build -p ssim2-gpu --no-default-features --features wgpu
#
# The default feature set leaves it on — that's correct for CUDA,
# Windows DX12, and HIP. Mac / Metal users (or anyone unsure of their
# wgpu sub-backend's float-atomic support) should disable it.
fast-reduction = []
# Opt-in separable FIR D=5 Gaussian blur path
# (Kanetaka et al. IWAIT 2026 Technique 1). OFF by default — the
# default surface remains the canonical libjxl IIR + skip-map only.
#
# The FIR is a **distinct metric** (per-image scores diverge from the
# IIR's by design — different impulse-response support); enabling this
# feature surfaces `Ssim2Blur`, `with_blur` / `set_blur` / `blur()`,
# `SSIM2_FIR_COLUMN_NAME`, and `column_name_for_blur`. Users sweeping
# both should land FIR scores in a dedicated parquet column via
# `SSIM2_FIR_COLUMN_NAME` to avoid mixing with IIR's column.
fir = []

[dependencies]
cubecl = { workspace = true }
zenpixels = { version = "0.2.11", default-features = false, features = ["std"], optional = true }
zenpixels-convert = { version = "0.2.11", default-features = false, features = ["std"], optional = true }

[build-dependencies]
nalgebra = { version = "0.33", default-features = false, features = ["std"] }

[dev-dependencies]
ssimulacra2 = { workspace = true }
yuvxyb = "0.5.0"
bytemuck = { workspace = true }
imgref = { workspace = true }
rgb = { workspace = true }
image = { workspace = true, features = ["png", "jpeg"] }
zenmetrics-corpus = { workspace = true }
zenpixels = { version = "0.2.11", default-features = false, features = ["std"] }

# Examples and tests consuming the typed Ssim2<R> / Ssim2Batch<R>.
[[example]]
name = "batch_smoke"
required-features = ["cubecl-types"]

[[example]]
name = "bench_batch"
required-features = ["cubecl-types"]

[[example]]
name = "bench_t4_warm"
required-features = ["cubecl-types"]

[[example]]
name = "blur_parity"
required-features = ["cubecl-types"]

[[example]]
name = "cached_reference"
required-features = ["cubecl-types"]

[[example]]
name = "end_to_end"
required-features = ["cubecl-types"]

[[example]]
name = "parity_jpeg_corpus"
required-features = ["cubecl-types"]

[[example]]
name = "parity_real_image"
required-features = ["cubecl-types"]

[[example]]
name = "srgb_parity"
required-features = ["cubecl-types"]

[[example]]
name = "ssim2_bench_warm"
required-features = ["cubecl-types"]

[[example]]
name = "xyb_parity"
required-features = ["cubecl-types"]

[[test]]
name = "blur_mode_api"
required-features = ["cubecl-types"]

[[test]]
name = "fir_path"
required-features = ["cubecl-types", "fir"]

[[test]]
name = "parity_lock"
required-features = ["cubecl-types"]

[[test]]
name = "ssim2_skipmap_audit"
required-features = ["cubecl-types"]

[[test]]
name = "opaque"
required-features = ["cubecl-types"]
